cmach.output
Grammar

    0 $accept: program $end

    1 program: input

    2 input: %empty
    3      | input line

    4 line: ';'
    5     | cmd ';'

    6 cmd: CLEAR
    7    | SHOW
    8    | GET
    9    | ADD NUM
   10    | MULT NUM
   11    | SUB NUM
   12    | MOD NUM
   13    | REP NUM


Terminals, with rules where they appear

$end (0) 0
';' (59) 4 5
error (256)
NUM (258) 9 10 11 12 13
CLEAR (259) 6
ADD (260) 9
MULT (261) 10
SHOW (262) 7
SUB (263) 11
GET (264) 8
MOD (265) 12
REP (266) 13


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
program (14)
    on left: 1, on right: 0
input (15)
    on left: 2 3, on right: 1 3
line (16)
    on left: 4 5, on right: 3
cmd (17)
    on left: 6 7 8 9 10 11 12 13, on right: 5


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (input)

    program  go to state 1
    input    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: input .
    3 input: input . line

    CLEAR  shift, and go to state 4
    ADD    shift, and go to state 5
    MULT   shift, and go to state 6
    SHOW   shift, and go to state 7
    SUB    shift, and go to state 8
    GET    shift, and go to state 9
    MOD    shift, and go to state 10
    REP    shift, and go to state 11
    ';'    shift, and go to state 12

    $default  reduce using rule 1 (program)

    line  go to state 13
    cmd   go to state 14


State 3

    0 $accept: program $end .

    $default  accept


State 4

    6 cmd: CLEAR .

    $default  reduce using rule 6 (cmd)


State 5

    9 cmd: ADD . NUM

    NUM  shift, and go to state 15


State 6

   10 cmd: MULT . NUM

    NUM  shift, and go to state 16


State 7

    7 cmd: SHOW .

    $default  reduce using rule 7 (cmd)


State 8

   11 cmd: SUB . NUM

    NUM  shift, and go to state 17


State 9

    8 cmd: GET .

    $default  reduce using rule 8 (cmd)


State 10

   12 cmd: MOD . NUM

    NUM  shift, and go to state 18


State 11

   13 cmd: REP . NUM

    NUM  shift, and go to state 19


State 12

    4 line: ';' .

    $default  reduce using rule 4 (line)


State 13

    3 input: input line .

    $default  reduce using rule 3 (input)


State 14

    5 line: cmd . ';'

    ';'  shift, and go to state 20


State 15

    9 cmd: ADD NUM .

    $default  reduce using rule 9 (cmd)


State 16

   10 cmd: MULT NUM .

    $default  reduce using rule 10 (cmd)


State 17

   11 cmd: SUB NUM .

    $default  reduce using rule 11 (cmd)


State 18

   12 cmd: MOD NUM .

    $default  reduce using rule 12 (cmd)


State 19

   13 cmd: REP NUM .

    $default  reduce using rule 13 (cmd)


State 20

    5 line: cmd ';' .

    $default  reduce using rule 5 (line)
